# tao-catalog

./: .env.example  .gitignore  README.md  render.yaml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
docs/: RUNNING_THE_APP.md  RUNNING_THE_SERVICE.md
scripts/: import_catalog.py  test_service.py
service/: .env.example  Cargo.toml  DEPLOY_FLY.md  DEPLOY_RENDER.md  Dockerfile  fly.toml
service/migrations/: 0001_init.sql
service/src/: main.rs  models.rs
